--- a/css/style.css
+++ b/css/style.css
@@ -101,9 +101,10 @@ p:last-of-type {
     margin-bottom: 0;
 }
 
+
 .featured-albums h1 {
     font-size: 1.75em;
-    margin: 1em;
+    margin: 6em 1em 1em;
     color: var(--colour-bg);
 }
 
@@ -133,6 +134,11 @@ body {
     width: 100%;
 }
 
+.ion-icon {
+    font-size: 5em;
+}
+
+
 /* img {
     width: 100%;
     height: auto;
@@ -144,17 +150,22 @@ body {
 }
 
 
-.view-album-btn-container{
-    margin-top: 10em;
+
+.view-album-btn-container {
+    margin-top: 23em;
 }
+
 
 .aotw-container {
     width: 95%;
     max-width: 70em;
     margin: 0 auto;
-
 }
 
+
+.aotw-container h1 {
+    color: var(--colour-text-secondary);
+}
 
 .container {
     width: 95%;
@@ -329,6 +340,10 @@ p{
 .card__price {
     color: var(--colour-tertiary);
     font-size: 1.25rem;
+}
+
+a.card__img{
+    background-color: red;
 }
 
 
@@ -1152,7 +1167,8 @@ label {
 /* ============================== Featured Albums ====================================*/
 
 .featured-albums {
-    margin: 3em 0 0;
+    margin-top: 3em;
+    margin-bottom: 3em;
 }
 
 .featured-item {
@@ -1218,6 +1234,10 @@ footer {
     background: var(--colour-secondary);
     text-align: left;
     padding: 5em 0;
+}
+
+.footer-container {
+    margin-top: 5em;
 }
 
 .main-footer {
