--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,4 @@
 :root {
-
     --colour-bg: #e5e9ec;
     --colour-text: #444444;
     --colour-text-secondary: rgb(238, 228, 208);
@@ -7,7 +6,6 @@
     --colour-secondary: #ffd891;
     --colour-tertiary: #333;
     --colour-accent: #F56526;
-
 
     --font-primary: colfax-web, sans-serif;
     --text-base-size: 1rem;
@@ -17,7 +15,6 @@
     --text-lg: 2rem;
     --text-md: 1.4rem;
 }
-
 
 html {
     box-sizing: border-box;
@@ -34,12 +31,9 @@ html {
     box-sizing: inherit;
 }
 
-
-
 /*=================== Column System =====================*/
 
 /* Any class that starts with col- will get a float left */
-
 [class^=col-] {
     width: 100%;
     margin-top: 1em;
@@ -49,12 +43,10 @@ html {
     margin-top: 0;
 }
 
-
 .col-1 {
     width: 33.3333334%;
     float: left;
 }
-
 
 @media(min-width: 40rem) {
 
@@ -62,7 +54,6 @@ html {
         float: left;
         padding: 0 .5em;
     }
-
 
     [class^=col-]:first-child {
         padding-left: 0;
@@ -81,9 +72,6 @@ html {
     }
 }
 
-
-
-
 /* ================== Typography ================== */
 
 h1 {
@@ -101,20 +89,17 @@ p:last-of-type {
     margin-bottom: 0;
 }
 
-
 .featured-albums h1 {
     font-size: 1.75em;
     margin: 6em 1em 1em;
     color: var(--colour-bg);
 }
 
-
 .featured-albums p {
     font-size: 1.4em;
     margin: 1em;
     color: var(--colour-bg);
 }
-
 
 body {
     background-color: var(--colour-bg);
@@ -130,7 +115,6 @@ body {
     min-height: 100vh;
     text-rendering: optimizeSpeed;
     line-height: 1.5;
-
 }
 
 .header {
@@ -144,7 +128,6 @@ body {
 .ion-icon {
     font-size: 5em;
 }
-
 
 img {
     width: 100%;
@@ -160,13 +143,11 @@ img {
     margin-top: 21em;
 }
 
-
 .aotw-container {
     width: 95%;
     max-width: 70em;
     margin: 0 auto;
 }
-
 
 .aotw-container h1 {
     color: var(--colour-bg);
@@ -180,14 +161,11 @@ img {
 }
 
 .checkout-container {
-    /* margin: 10em 5em 10em 10em; */
     margin: 12em 9em 16em 28em;
     background-color: red;
 }
 
-
 /*========================= Individual Product Page  ========================*/
-
 
 .small-container {
     max-width: 1000px;
@@ -195,7 +173,6 @@ img {
     padding-left: 25px;
     padding-right: 20px;
 }
-
 
 .product-page-container {
     padding-top: 5em;
@@ -208,7 +185,6 @@ img {
     flex-wrap: wrap;
     justify-content: space-around;
 }
-
 
 .single-product {
     margin-top: 80px;
@@ -233,7 +209,6 @@ img {
     padding: 0;
 }
 
-
 .single-product .col-2 {
     padding: 20px;
 }
@@ -249,7 +224,6 @@ img {
     margin: 25px 0;
 }
 
-
 .single-product select {
     display: block;
     padding: 1em;
@@ -261,23 +235,18 @@ img {
     font-weight: bold;
 }
 
-
 .single-product input {
     width: 50px;
     height: 40px;
     padding-left: 10px;
     font-size: 20px;
     margin-right: 10px;
-    border: 10px solid hotpink;
-
+    border: 10px solid;
 }
-
 
 input:focus {
     outline: none;
-
 }
-
 
 a {
     text-decoration: none;
@@ -293,17 +262,6 @@ p {
     color: var(--colour-text);
 }
 
-.btn {
-    display: inline-block;
-    background: hotpink;
-    color: red;
-    padding: 8px 30px;
-    margin: 30px 0;
-    border-radius: 30px;
-    transition: background 0.5s;
-}
-
-
 @media (max-width: 820px) {
     .col-2 img {
         max-width: 100%;
@@ -311,16 +269,17 @@ p {
     }
 }
 
-/*===========================  New Product Layout (Search Page)  =========================== */
+/*========================= END == Individual Product Page == END ========================*/
 
 
+
+/*=========================== Product Layout (Search Page) =========================== */
 
 /* A elements that don't have a class get default styles */
 a:not([class]) {
     text-decoration-skip-ink: auto;
 }
 
-/* Make images easier to work with */
 img,
 picture {
     max-width: 100%;
@@ -352,7 +311,6 @@ select {
     }
 }
 
-
 .container {
     max-width: 100rem;
     margin-inline: auto;
@@ -376,7 +334,6 @@ select {
 
 .card {
     aspect-ratio: 1 / 1.5;
-    /* border: 3px solid hotpink; */
 }
 
 .card__content {
@@ -441,13 +398,11 @@ p.min-content {
     width: min-content;
 }
 
+/*================== -END- Product Layout (Search Page) -END- ==================*/
 
 
 
-/*================== END New Product Layout (Search Page)  END ==================*/
-
-
-
+/*=========================== Header ============================*/
 
 .clearfix::after,
 .section::after,
@@ -455,7 +410,6 @@ footer::after {
     content: '';
     display: block;
     clear: both;
-
 }
 
 .title {
@@ -465,10 +419,7 @@ footer::after {
 .title span {
     font-weight: 300;
     display: block;
-    /* font-size: 1.5em; */
-    /* margin: 0em 0em 0.5em 0.1em; */
 }
-
 
 .title-cta {
     margin-bottom: 0 0 .5em;
@@ -481,25 +432,20 @@ footer::after {
 }
 
 @media (min-width: 60rem) {
-
     p {
         font-size: 1.2rem;
         line-height: 1.6;
     }
 
-
     .title {
         font-size: 2.7rem;
     }
-
 }
-
 
 .nav-toggle {
     display: none;
 
 }
-
 
 .nav-toggle-label {
     position: absolute;
@@ -528,7 +474,6 @@ footer::after {
     position: absolute;
 }
 
-
 .nav-toggle-label span::before {
     bottom: 7px;
 }
@@ -536,7 +481,6 @@ footer::after {
 .nav-toggle-label span::after {
     top: 7px;
 }
-
 
 .nav {
     position: absolute;
@@ -588,11 +532,8 @@ footer::after {
         width: 30%;
         height: 10%;
         margin-left: 35%;
-
     }
 }
-
-
 
 @media screen and (min-width: 800px) {
     .nav-toggle-label {
@@ -628,9 +569,7 @@ footer::after {
         display: flex;
         justify-content: flex-end;
         align-items: center;
-
     }
-
 
     .nav ul {
         display: flex;
@@ -663,9 +602,7 @@ footer::after {
     .nav a:hover::before {
         transform: scale(1, 1);
     }
-
 }
-
 
 .product-layout {
     display: flex;
@@ -673,7 +610,6 @@ footer::after {
     flex-wrap: wrap;
     padding: 1em;
 }
-
 
 .product-card {
     padding: 1.5rem;
@@ -685,7 +621,6 @@ footer::after {
     flex-wrap: nowrap;
     /* flex: 0 1; */
     gap: 2rem;
-
 }
 
 .product-card a {
@@ -695,7 +630,6 @@ footer::after {
     color: rgb(42, 67, 175);
     font-size: 2em;
 }
-
 
 .product-card a img {
     width: 100%;
@@ -709,7 +643,6 @@ footer::after {
     flex-wrap: nowrap;
     gap: 1rem;
 }
-
 
 #trackInfo ul li {
     padding: 0px;
@@ -727,7 +660,6 @@ footer::after {
     padding-bottom: 0.5em;
     font-size: 2em;
     font-weight: bold;
-
 }
 
 #add-to-cart-product-page {
@@ -735,14 +667,11 @@ footer::after {
     padding-bottom: 1em;
 }
 
+/*================== -END- Product Layout (Search Page) -END- ==================*/
 
-#secure-icon {
-    width: 5em;
-    height: 5em;
-}
 
-/********    START   Shopping Cart   START    **********/
 
+/*=========================== Shopping Cart ============================*/
 
 .shop-item {
     margin: 30px;
@@ -778,7 +707,6 @@ footer::after {
     flex-wrap: wrap;
     justify-content: space-around;
 }
-
 
 .cart-header {
     font-weight: bold;
@@ -876,11 +804,10 @@ footer::after {
     font-size: 1.1em;
 }
 
+/*========================== -END- Shopping Cart -END- ============================*/
 
 
-
-
-/********   END    Shopping Cart   END    **********/
+/* ============================== Buttons ====================================*/
 
 
 
@@ -888,15 +815,17 @@ footer::after {
     background-color: var(--colour-primary);
     border: 2px solid var(--colour-primary);
     color: var(--colour-secondary);
-
 }
-
 
 .btn-primary--accent {
     background-color: var(--colour-accent);
     border-color: var(--colour-accent);
 }
 
+.btn-primary-accent:hover,
+.btn-primary-accent:focus {
+    background-color: rgb(207, 9, 9);
+}
 
 .btn-hero {
     margin-top: 1em;
@@ -918,15 +847,7 @@ footer::after {
 .btn-hero-accent:hover,
 .btn-hero-accent:focus {
     background-color: var(--colour-accent);
-
 }
-
-
-/* .button {
-    display: flex;
-    justify-content: right;
-    grid-column: 1/3;
-} */
 
 .btn-cta-dark {
     text-decoration: none;
@@ -935,12 +856,10 @@ footer::after {
     border-color: var(--colour-tertiary);
 }
 
-
 .btn-cta-dark:hover,
 .btn-cta-dark:focus {
     background: var(--colour-secondary);
 }
-
 
 .button {
     display: inline-block;
@@ -951,7 +870,6 @@ footer::after {
     border-style: solid;
     padding: .5em 1.75em;
 }
-
 
 @media (min-width: 60rem) {
     .button {
@@ -964,7 +882,6 @@ footer::after {
     font-weight: 700;
 }
 
-
 .button-accent {
     color: var(--colour-text-secondary);
     border-color: var(--colour-accent)
@@ -974,38 +891,6 @@ footer::after {
 .button-accent:focus {
     background-color: var(--colour-accent);
 }
-
-
-.btn-primary:hover {
-    background-color: #0E64E4;
-}
-
-.btn-primary--hover {
-    background-color: #0E64E4;
-}
-
-.btn-primary:active {
-    background-color: #0151C8;
-}
-
-.btn-primary--active {
-    background-color: #0151C8;
-}
-
-.btn-primary:focus {
-    background-color: #1070FF;
-    border: 2px solid #7CAFFC;
-    box-shadow: 0px 0px 5px #adceff;
-}
-
-.btn-primary--focus {
-    background-color: #1070FF;
-    border: 2px solid #7CAFFC;
-    box-shadow: 0px 0px 5px #adceff;
-}
-
-
-
 
 .btn-secondary {
     display: inline-block;
@@ -1020,14 +905,9 @@ footer::after {
     color: var(--colour-primary);
 }
 
-
 .btn-secondary:hover {
     background-color: #f59518;
 }
-
-/* .btn-secondary--hover {
-    background-color: #E8F1FF;
-} */
 
 .btn-secondary:active {
     background-color: #DBEAFF;
@@ -1050,6 +930,10 @@ footer::after {
 }
 
 
+/*========================== -END- Buttons -END- ============================*/
+
+
+
 /* ============================== Hero Home ====================================*/
 
 .home-hero {
@@ -1063,13 +947,11 @@ footer::after {
     background-repeat: no-repeat;
 }
 
-
 @media (min-width: 60rem) {
     .home-hero {
         height: 100vh;
         padding-top: 35vh;
     }
-
 }
 
 .home-about-textbox {
@@ -1104,7 +986,6 @@ footer::after {
         padding: 0 .325em;
     }
 }
-
 
 @media (min-width: 60rem) {
 
@@ -1141,6 +1022,9 @@ footer::after {
 }
 
 
+/* ============================== -END- Hero Home -END- ====================================*/
+
+
 /* ============================== Featured Albums ====================================*/
 
 .featured-albums {
@@ -1168,8 +1052,6 @@ footer::after {
     padding-bottom: 2em;
 }
 
-
-
 .album-desc p {
     margin: 1em;
 }
@@ -1195,6 +1077,8 @@ footer::after {
         transform: translateY(0%);
     }
 }
+
+/* ============================== -END- Featured Albums -END- ====================================*/
 
 
 /* ============================== Call to Action ====================================*/
@@ -1267,22 +1151,14 @@ footer a {
 
 }
 
-
-
-/* ============================== *END* Footer *END*====================================*/
-
-
-
+/* ============================== -END- Footer -END- ====================================*/
 
 
 
 /* ============================== *START*  Checkout *START* ====================================*/
 
 
-
 /* Form fills: Styling the text input */
-
-
 input,
 textarea,
 select {
@@ -1294,9 +1170,7 @@ select {
     vertical-align: middle;
 }
 
-
 @media (max-width: 375px) {
-
     input,
     textarea,
     select {
@@ -1308,15 +1182,11 @@ select {
     }
 }
 
-
-
-
 .textInput {
     padding: 0.75rem 1rem;
     border-radius: 0.5rem;
     font-size: 0.9rem;
 }
-
 
 form {
     margin: auto;
@@ -1329,7 +1199,6 @@ label {
     display: block;
     margin-top: 0;
 }
-
 
 .checkout-card {
     background-color: var(--colour-bg);
@@ -1421,7 +1290,6 @@ form {
     }
 }
 
-
 .shipping-method-radios {
     margin: 1em 3em 1em -3em;
 }
@@ -1430,3 +1298,5 @@ form {
     width: 10em;
     height: 10em;
 }
+
+/* ============================== -END-  Checkout -END- ====================================*/
